# valhalla

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  lzma-arm64-fix.patch  valhalla.bzl
locales/: make_locales.sh
proto/: BUILD.bazel  directions.proto  options.proto
test/: BUILD.bazel  datetime.cc  geometry.cc  graphtileheader.cc  map_matcher_factory.cc  pointtileindex.cc  tar_index.cc  test.cc  test.h
valhalla/: proto_conversions.h  worker.h
valhalla/baldr/: datetime.h  graphreader.h  location.h  openlr.h  pathlocation.h  streetname.h  streetnames.h  streetnames_factory.h  streetnames_us.h  time_info.h
valhalla/loki/: polygon_search.h  worker.h
valhalla/meili/: state.h
valhalla/mjolnir/: transitpbf.h
valhalla/odin/: directionsbuilder.h  enhancedtrippath.h  maneuver.h  maneuversbuilder.h  narrative_builder_factory.h  narrativebuilder.h  util.h  worker.h
valhalla/sif/: autocost.h  bicyclecost.h  costfactory.h  dynamiccost.h  motorcyclecost.h  motorscootercost.h  nocost.h  pedestriancost.h  transitcost.h  truckcost.h
valhalla/thor/: bidirectional_astar.h  costmatrix.h  dijkstras.h  isochrone.h  multimodal.h  pathalgorithm.h  route_matcher.h  triplegbuilder.h  worker.h
valhalla/tyr/: actor.h  serializers.h
